# pj-market-data

./: .env  .gitignore  .pylintrc  Makefile  README.md  docker-compose.yml  download_jars.sh  pyproject.toml
airflow/: Dockerfile  requirements.txt
airflow/dags/: hello_world.py  test_spark_connection.py  test_src.py  vnstock_data_ingestion.py  vnstock_data_ingestion_company.py  vnstock_transform.py  vnstock_transform_company.py  vnstock_transform_stock.py
airflow/secrets/: connections.json
airflow/spark/application/python/: load_from_s3_to_pg.py  process_company.py  process_stock_price.py  test_connection.py
docs/: architecture.md  developer_guide.md  roadmap.md
docs/diagram/: pipeline_architecture.mermaid
notebooks/: .dockerignore  Dockerfile  eda_vnstock.ipynb  pipeline.ipynb  spark-defaults.conf  spark_test.ipynb
notebooks/work/: process_stock_price.ipynb  process_symbol_info.ipynb  test.ipynb
postgresql/init-scripts/: init-analytics.sql
postgresql/queries/: verify_users.sql
spark/: Dockerfile  spark-defaults.conf
spark/jobs/: test_job.py
src/commons/: constants.py
src/commons/connectors/: base.py  s3.py
src/extract/: base.py
src/load/: s3.py
src/pipeline/: el_companies.py  el_stocks.py  main.py  test_script.py
src/pipeline/commons/: constants.py  custom_exceptions.py  helpers.py
src/pipeline/commons/connectors/: base.py  s3.py  (+1 more)
src/pipeline/extract/: base.py  vnstock_lib.py
src/pipeline/load/: base.py  s3.py
src/pipeline/transform/: base.py  vnstock.py
src/scripts/: test_fetch_history.py  test_spark_connection.sh
